fix (carousel) bad image cropping for event slide

--- a/_sass/hl2/_carousel.scss
+++ b/_sass/hl2/_carousel.scss
@@ -25,6 +25,12 @@ header {
         }
       }
 
+      @include media-breakpoint-down(sm) {
+        &.hl2-slide-meeting {
+          background-image: url('/assets/img/home/carousel/salon.jpg');
+        }
+      }
+
       & .hl2-slide {
         position: absolute;
         top: 0;
